# quish

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
quish-auth/: Cargo.toml
quish-auth/src/: lib.rs  oidc.rs  pam.rs  pubkey.rs  totp.rs
quish-client/: Cargo.toml
quish-client/src/: config.rs  connect.rs  cp.rs  main.rs  terminal.rs
quish-proto/: Cargo.toml
quish-proto/fuzz/: Cargo.toml
quish-proto/fuzz/fuzz_targets/: decode.rs
quish-proto/src/: lib.rs
quish-server/: Cargo.toml
quish-server/src/: config.rs  ipc.rs  main.rs  monitor.rs  privdrop.rs  ratelimit.rs  session.rs  signproxy.rs  transport.rs  worker.rs
quish-server/tests/: e2e.rs  privsep_e2e.rs
