[package]
name = "quish-auth"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.103"
async-trait = "0.1.89"
base64 = "0.22.1"
ed25519-dalek = "2.2.0"
pam-client = { version = "0.5.0", optional = true }
postcard = { version = "1.1.3", default-features = false, features = ["use-std"] }
serde = { version = "1.0.228", features = ["derive"] }
ssh-key = { version = "0.6.7", features = ["ed25519"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt", "time", "macros"] }
tracing = "0.1.44"
zeroize = "1.9.0"

[lints]
workspace = true

[features]
# PAM is off by default: it needs libpam + libclang (bindgen) to build and only
# the monitor (M5, root) links it. Build with `--features pam` to compile it.
default = []
pam = ["dep:pam-client"]

[dev-dependencies]
tokio = { version = "1.52.3", features = ["test-util", "macros", "rt"] }
