[package]
name = "quish-client"
version = "0.2.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "quish — SSH-like remote shell client over HTTP/3"

[package.metadata.deb]
maintainer = "quish project <quish@users.noreply.github.com>"
name = "quish"
section = "net"
priority = "optional"
assets = [["../target/release/quish", "usr/bin/", "755"]]

[package.metadata.generate-rpm]
assets = [{ source = "target/release/quish", dest = "/usr/bin/quish", mode = "755" }]

[[bin]]
name = "quish"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.103"
bytes = "1.12.0"
clap = { version = "4.6.1", features = ["derive"] }
h3 = "0.0.8"
h3-quinn = "0.0.10"
http = "1.4.2"
qrcode = { version = "0.14.1", default-features = false }
quinn = "0.11.11"
quish-auth = { version = "0.2.0", path = "../quish-auth", default-features = false }
quish-proto = { version = "0.2.0", path = "../quish-proto" }
rpassword = "7.5.4"
rustix = { version = "1.1.4", features = ["termios", "stdio"] }
rustls = { version = "0.23.41", default-features = false, features = ["ring", "std"] }
rustls-pki-types = "1.15.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util", "io-std", "signal"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
webpki-roots = "1.0.8"

[lints]
workspace = true
