[package]
name = "quish-proto"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
postcard = { version = "1.1.3", default-features = false, features = ["use-std"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"

[lints]
workspace = true
