[package]
name = "quish-proto"
version = "0.2.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
base64 = "0.22"
bytes = "1.12.0"
postcard = { version = "1.1.3", default-features = false, features = ["use-std"] }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.11.0"
thiserror = "2.0.18"

[lints]
workspace = true
