[package]
name = "quish-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "quishd"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.103"
bytes = "1.12.0"
clap = { version = "4.6.1", features = ["derive"] }
h3 = "0.0.8"
h3-quinn = "0.0.10"
http = "1.4.2"
quinn = "0.11.11"
quish-proto = { version = "0.1.0", path = "../quish-proto" }
rcgen = "0.14.7"
rustls = { version = "0.23.41", default-features = false, features = ["ring"] }
sha2 = "0.11.0"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[lints]
workspace = true
