[package]
name = "quish-server"
version = "0.2.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "quishd — SSH-like remote shell server over HTTP/3"

# Packaging. Build the binary first (`--features pam`), then:
#   cargo deb --no-build -p quish-server
#   cargo generate-rpm -p quish-server
# cargo-deb resolves asset sources relative to this manifest dir; cargo-generate-rpm
# relative to the workspace root (where it's invoked) — hence the differing prefixes.
[package.metadata.deb]
maintainer = "quish project <quish@users.noreply.github.com>"
name = "quish-server"
section = "net"
priority = "optional"
depends = "libpam0g, libc6, systemd"
maintainer-scripts = "../dist/deb-maintainer-scripts"
assets = [
    ["../target/release/quishd", "usr/bin/", "755"],
    ["../dist/pam.d/quish", "etc/pam.d/quish", "644"],
    ["../dist/sysusers.d/quishd.conf", "usr/lib/sysusers.d/quishd.conf", "644"],
    ["../dist/server.toml", "etc/quish/server.toml", "644"],
]
conf-files = ["/etc/pam.d/quish", "/etc/quish/server.toml"]

# Ships the unit but does NOT enable/start it: quishd needs a host-key dir + config
# first, so the admin runs `systemctl enable --now quishd`. cargo-deb still injects a
# daemon-reload at #DEBHELPER# in our postinst.
[package.metadata.deb.systemd-units]
unit-name = "quishd"
unit-scripts = "../dist/systemd"
enable = false
start = false

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/quishd", dest = "/usr/bin/quishd", mode = "755" },
    { source = "dist/systemd/quishd.service", dest = "/usr/lib/systemd/system/quishd.service", mode = "644" },
    { source = "dist/pam.d/quish", dest = "/etc/pam.d/quish", mode = "644", config = "noreplace" },
    { source = "dist/sysusers.d/quishd.conf", dest = "/usr/lib/sysusers.d/quishd.conf", mode = "644" },
    { source = "dist/server.toml", dest = "/etc/quish/server.toml", mode = "644", config = "noreplace" },
]
# Create the quish user + register the unit, mirroring the deb postinst. Fedora's
# sysusers/systemd filetriggers would normally do this, but don't fire everywhere
# (minimal images), so we do it explicitly. Not enabled/started — admin does that.
post_install_script = '''
command -v systemd-sysusers >/dev/null 2>&1 && systemd-sysusers /usr/lib/sysusers.d/quishd.conf || :
[ -d /run/systemd/system ] && systemctl daemon-reload || :
'''

[package.metadata.generate-rpm.requires]
pam = "*"
systemd = "*"

[[bin]]
name = "quishd"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.103"
base64 = "0.22.1"
bytes = "1.12.0"
clap = { version = "4.6.1", features = ["derive"] }
h3 = "0.0.8"
h3-quinn = "0.0.10"
http = "1.4.2"
nix = { version = "0.31.3", features = ["fs", "user", "process", "term", "signal"] }
portable-pty = "0.9.0"
postcard = { version = "1.1.3", default-features = false, features = ["use-std"] }
quinn = "0.11.11"
quish-auth = { version = "0.2.0", path = "../quish-auth", default-features = false }
quish-proto = { version = "0.2.0", path = "../quish-proto" }
rcgen = "0.14.7"
rustix = { version = "1.1.4", features = ["termios"] }
rustls = { version = "0.23.41", default-features = false, features = ["ring"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util", "process"] }
tokio-seqpacket = "0.9.0"
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[lints]
workspace = true

[features]
pam = ["quish-auth/pam"]
